# fastapi_init

./: .env  Makefile  pyproject.toml
fastapi_logging_ex/: main.py  routers.py  settings.py
fastapi_logging_ex/apps/airport/: routers.py  service.py  shemas.py
fastapi_logging_ex/apps/country/: schemas.py
